Bug #8408 Stored procedure crash if function contains SHOW
Submitted: 9 Feb 2005 23:14 Modified: 28 Apr 2005 4:25
Reporter: Peter Gulutzan
Status: Closed
Category:Server Severity:S3 (Non-critical)
Version:5.0.3-alpha-debug OS:Linux (SUSE 9.2)
Assigned to: Bugs System Target Version:

[9 Feb 2005 23:14] Peter Gulutzan
Description:
If a function contains SHOW, a statement which uses the function crashes.
(This depends on a new 'feature' to allow table references in functions.)

How to repeat:
mysql> create function f21 () returns int begin show warnings; return 5; end;//
Query OK, 0 rows affected (0.00 sec)

mysql> select f21()//
ERROR 2027 (HY000): Malformed packet
mysql> select f21()//
ERROR 2006 (HY000): MySQL server has gone away
[9 Feb 2005 23:19] Miguel Solorzano
Thank you for the bug report.
[26 Apr 2005 17:53] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/24326
[27 Apr 2005 16:57] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/24381
[28 Apr 2005 4:25] Paul DuBois
Noted in 5.0.6 changelog.